--- a/008-vscode基本使用/demo/index.less
+++ b/008-vscode基本使用/demo/index.less
@@ -1,9 +1,37 @@
-@bgColor: red;
-@import 'common';
+ 
+ @count : 15;  // 屏幕总共分为15份
+ @perWidth: 750 / @count; // 每一份的宽度
+
+ html {
+     font-size: 50px;  // 规定屏幕最宽的标准不能超过750, 超过按750标准算
+ }
+
+ @media screen and (min-width: 320px){
+    html {
+    font-size: 320PX / @count;
+    }
+}
+
+@media screen and (min-width: 375px){
+    html {
+        font-size: 375PX / @count;
+    }
+}
+ 
+@media screen and (min-width: 720pxx){
+    html {
+        font-size:  720px / @count;
+    }
+}
 
 
-div {
-    background-color: @bgColor;
-    width: (@count * 1rem)  ;
-    height: 100px;
+// 下面是重点
+.box1 {
+    width:  count * 1rem; // 表示可以接受的最大宽度
+}
+
+
+.box2 {
+    width: 88rem / @perWidth; // 表示的是标准设计文档 750px 尺寸下的 88px
+    // rem / @perWidth 表示的就是 1px
 }
